--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "redirects": [
-      { "source": "/products/crm/", "destination": "/products/microsoft-dynamics-crm/", "permanent": true }
+      { "source": "/products/crm/", "destination": "/products/microsoft-dynamics-crm/", "permanent": true },
+      { "source": "/products/microsoft-office-365.html", "destination": "/", "permanent": true }
 
     ]
   }
