--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "dscanada",
+  "name": "ds-uk",
+  "homepage": "https://www.dynamicssquare.co.uk/",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +18,7 @@
     "bootstrap-icons": "^1.9.1",
     "emailjs-com": "^3.2.0",
     "next": "12.2.5",
+    "next-sitemap": "^3.1.43",
     "next-videos": "^1.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
