--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-videos": "^1.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-modal-video": "^1.2.10",
