--- a/vercel.json
+++ b/vercel.json
@@ -98,7 +98,8 @@
     { "source": "/tag/microsoft-azure/", "destination": "/products/azure-iot-internet-of-things/", "permanent": true },
     { "source": "/solutions/microsoft-dynamics-ax.html", "destination": "/products/microsoft-dynamics-ax/", "permanent": true },
     { "source": "/microsoft-dynamics-ax.html", "destination": "/products/microsoft-dynamics-ax/", "permanent": true },
-    { "source": "/blog/", "destination": "https://blog.dynamicssquare.co.uk/", "permanent": true }
+    { "source": "/blog/", "destination": "https://blog.dynamicssquare.co.uk/", "permanent": true },
+    { "source": "/blog/power-bi-pricing-uk/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-pricing-uk/", "permanent": true }
 
   ]
 }
