--- a/vercel.json
+++ b/vercel.json
@@ -99,7 +99,8 @@
     { "source": "/solutions/microsoft-dynamics-ax.html", "destination": "/products/microsoft-dynamics-ax/", "permanent": true },
     { "source": "/microsoft-dynamics-ax.html", "destination": "/products/microsoft-dynamics-ax/", "permanent": true },
     { "source": "/blog/", "destination": "https://blog.dynamicssquare.co.uk/", "permanent": true },
-    { "source": "/blog/power-bi-pricing-uk/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-pricing-uk/", "permanent": true }
+    { "source": "/blog/power-bi-pricing-uk/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-pricing-uk/", "permanent": true },
+    { "source": "/blog/dynamics-365-storage-cost/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-storage-cost/", "permanent": true }
 
   ]
 }
