add redirction files

--- a/vercel.json
+++ b/vercel.json
@@ -100,7 +100,86 @@
     { "source": "/microsoft-dynamics-ax.html", "destination": "/products/microsoft-dynamics-ax/", "permanent": true },
     { "source": "/blog/", "destination": "https://blog.dynamicssquare.co.uk/", "permanent": true },
     { "source": "/blog/power-bi-pricing-uk/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-pricing-uk/", "permanent": true },
-    { "source": "/blog/dynamics-365-storage-cost/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-storage-cost/", "permanent": true }
-
+    { "source": "/blog/dynamics-365-storage-cost/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-storage-cost/", "permanent": true },
+    { "source": "/blog/power-bi-pricing-uk/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-pricing-uk/", "permanent": true },
+    { "source": "/blog/biggest-technology-trends/", "destination": "https://blog.dynamicssquare.co.uk/biggest-technology-trends/", "permanent": true },
+    { "source": "/blog/7-best-practices-for-successful-erp-implementation/", "destination": "https://blog.dynamicssquare.co.uk/7-best-practices-for-successful-erp-implementation/", "permanent": true },
+    { "source": "/blog/dynamics-365-storage-cost/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-storage-cost/", "permanent": true },
+    { "source": "/blog/how-to-upgrade-microsoft-dynamics-nav-to-business-central/", "destination": "https://blog.dynamicssquare.co.uk/how-to-upgrade-microsoft-dynamics-nav-to-business-central/", "permanent": true },
+    { "source": "/blog/why-microsoft-dynamics-nav-used-for/", "destination": "https://blog.dynamicssquare.co.uk/why-microsoft-dynamics-nav-used-for/", "permanent": true },
+    { "source": "/blog/migrate-nav-to-business-central/", "destination": "https://blog.dynamicssquare.co.uk/migrate-nav-to-business-central/", "permanent": true },
+    { "source": "/blog/data-cleaning-in-power-bi/", "destination": "https://blog.dynamicssquare.co.uk/data-cleaning-in-power-bi/", "permanent": true },
+    { "source": "/blog/power-bi-vs-tableau/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-vs-tableau/", "permanent": true },
+    { "source": "/blog/power-bi-vs-jet-reports/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-vs-jet-reports/", "permanent": true },
+    { "source": "/blog/what-is-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/what-is-dynamics-365-business-central/", "permanent": true },
+    { "source": "/blog/microsoft-gold-partner/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-gold-partner/", "permanent": true },
+    { "source": "/blog/what-makes-ms-dynamics-crm-so-good-for-customer-service/", "destination": "https://blog.dynamicssquare.co.uk/what-makes-ms-dynamics-crm-so-good-for-customer-service/", "permanent": true },
+    { "source": "/blog/dynamics-365-field-service-7-things-to-know-before-setting-up/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-field-service-7-things-to-know-before-setting-up/", "permanent": true },
+    { "source": "/blog/how-successful-is-your-dynamics-nav-implementation/", "destination": "https://blog.dynamicssquare.co.uk/how-successful-is-your-dynamics-nav-implementation/", "permanent": true },
+    { "source": "/blog/migrating-dynamics-gp-to-d365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/migrating-dynamics-gp-to-d365-business-central/", "permanent": true },
+    { "source": "/blog/migrating-from-dynamics-ax-to-dynamics-365/", "destination": "https://blog.dynamicssquare.co.uk/migrating-from-dynamics-ax-to-dynamics-365/", "permanent": true },
+    { "source": "/blog/how-to-avail-the-dynamics-365-business-central-trial/", "destination": "https://blog.dynamicssquare.co.uk/how-to-avail-the-dynamics-365-business-central-trial/", "permanent": true },
+    { "source": "/blog/dynamics-365-pricing-and-licensing/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-pricing-and-licensing/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-365-business-central-for-manufacturing/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-business-central-for-manufacturing/", "permanent": true },
+    { "source": "/blog/microsoft-supply-chain-platform/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-supply-chain-platform/", "permanent": true },
+    { "source": "/blog/microsoft-cloud-for-sustainability/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-cloud-for-sustainability/", "permanent": true },
+    { "source": "/blog/why-power-bi-for-business/", "destination": "https://blog.dynamicssquare.co.uk/why-power-bi-for-business/", "permanent": true },
+    { "source": "/blog/d365-supply-chain-management-overview/", "destination": "https://blog.dynamicssquare.co.uk/d365-supply-chain-management-overview/", "permanent": true },
+    { "source": "/blog/what-is-power-bi/", "destination": "https://blog.dynamicssquare.co.uk/what-is-power-bi/", "permanent": true },
+    { "source": "/blog/d365-finance-and-operations-overview/", "destination": "https://blog.dynamicssquare.co.uk/d365-finance-and-operations-overview/", "permanent": true },
+    { "source": "/blog/dynamics-365-sales-implementation-guide/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-sales-implementation-guide/", "permanent": true },
+    { "source": "/blog/dynamics-crm-guide-overview/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-crm-guide-overview/", "permanent": true },
+    { "source": "/blog/what-is-microsoft-dynamics-365-finance/", "destination": "https://blog.dynamicssquare.co.uk/what-is-microsoft-dynamics-365-finance/", "permanent": true },
+    { "source": "/blog/power-bi-reports/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-reports/", "permanent": true },
+    { "source": "/blog/power-bi-architecture/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-architecture/", "permanent": true },
+    { "source": "/blog/top-benefits-of-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/top-benefits-of-dynamics-365-sales/", "permanent": true },
+    { "source": "/blog/the-future-of-crm-forrester-wave-report/", "destination": "https://blog.dynamicssquare.co.uk/the-future-of-crm-forrester-wave-report/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-ax-features/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-features/", "permanent": true },
+    { "source": "/blog/project-service-automation-with-microsoft-project-add-in/", "destination": "https://blog.dynamicssquare.co.uk/project-service-automation-with-microsoft-project-add-in/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-wave-2/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-wave-2/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-vs-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-dynamics-365-sales/", "permanent": true },
+    { "source": "/blog/upgrade-v2-extension-data-from-navision-2018-to-business-central-on-premises/", "destination": "https://blog.dynamicssquare.co.uk/upgrade-v2-extension-data-from-navision-2018-to-business-central-on-premises/", "permanent": true },
+    { "source": "/blog/business-central-vs-finance-and-supply-chain/", "destination": "https://blog.dynamicssquare.co.uk/business-central-vs-finance-and-supply-chain/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-365-support/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-support/", "permanent": true },
+    { "source": "/blog/best-iot-platforms/", "destination": "https://blog.dynamicssquare.co.uk/best-iot-platforms/", "permanent": true },
+    { "source": "/blog/migrating-notes-and-attachments-dynamics-crm-2011-dynamics-365-online/", "destination": "https://blog.dynamicssquare.co.uk/migrating-notes-and-attachments-dynamics-crm-2011-dynamics-365-online/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-navision-2016-for-e-services/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-navision-2016-for-e-services/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-crm-for-perfect-sales-management/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-crm-for-perfect-sales-management/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-ax-for-expense-management/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-for-expense-management/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-365-for-smart-marketing/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-365-for-smart-marketing/", "permanent": true },
+    { "source": "/blog/lead-management-and-reporting-with-microsoft-crm-system/", "destination": "https://blog.dynamicssquare.co.uk/lead-management-and-reporting-with-microsoft-crm-system/", "permanent": true },
+    { "source": "/blog/how-does-microsoft-dynamics-crm-promote-social-engagement/", "destination": "https://blog.dynamicssquare.co.uk/how-does-microsoft-dynamics-crm-promote-social-engagement/", "permanent": true },
+    { "source": "/blog/why-upgrade-nav-2009-to-dynamics-nav-2017/", "destination": "https://blog.dynamicssquare.co.uk/why-upgrade-nav-2009-to-dynamics-nav-2017/", "permanent": true },
+    { "source": "/blog/what-is-microsoft-azure-iot-internet-of-things/", "destination": "https://blog.dynamicssquare.co.uk/what-is-microsoft-azure-iot-internet-of-things/", "permanent": true },
+    { "source": "/blog/what-is-business-central-implementation-methodology/", "destination": "https://blog.dynamicssquare.co.uk/what-is-business-central-implementation-methodology/", "permanent": true },
+    { "source": "/blog/what-is-azure-iot-hub/", "destination": "https://blog.dynamicssquare.co.uk/what-is-azure-iot-hub/", "permanent": true },
+    { "source": "/blog/upgrade-database-to-nav-2018-extension-v2/", "destination": "https://blog.dynamicssquare.co.uk/upgrade-database-to-nav-2018-extension-v2/", "permanent": true },
+    { "source": "/blog/reasons-to-upgrade-accounting-software/", "destination": "https://blog.dynamicssquare.co.uk/reasons-to-upgrade-accounting-software/", "permanent": true },
+    { "source": "/blog/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-for-mac-learn-how-to-use-power-bi-on-mac-devices/", "permanent": true },
+    { "source": "/blog/microsoft-dynamics-ax-for-distributors/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-dynamics-ax-for-distributors/", "permanent": true },
+    { "source": "/blog/how-to-choose-the-right-cloud-based-erp-crm-software/", "destination": "https://blog.dynamicssquare.co.uk/how-to-choose-the-right-cloud-based-erp-crm-software/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-2022-wave-1/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-2022-wave-1/", "permanent": true },
+    { "source": "/blog/10-best-erp-systems-for-small-businesses/", "destination": "https://blog.dynamicssquare.co.uk/10-best-erp-systems-for-small-businesses/", "permanent": true },
+    { "source": "/blog/website-launch-announcement/", "destination": "https://blog.dynamicssquare.co.uk/website-launch-announcement/", "permanent": true },
+    { "source": "/blog/steps-for-downloading-jet-reports/", "destination": "https://blog.dynamicssquare.co.uk/steps-for-downloading-jet-reports/", "permanent": true },
+    { "source": "/blog/shopify-connector-for-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/shopify-connector-for-dynamics-365-business-central/", "permanent": true },
+    { "source": "/blog/microsoft-crm-helps-focus-on-the-core-issues-concerning-marketing/", "destination": "https://blog.dynamicssquare.co.uk/microsoft-crm-helps-focus-on-the-core-issues-concerning-marketing/", "permanent": true },
+    { "source": "/blog/new-productivity-features-for-microsoft-dynamics-crm-online-2016/", "destination": "https://blog.dynamicssquare.co.uk/new-productivity-features-for-microsoft-dynamics-crm-online-2016/", "permanent": true },
+    { "source": "/blog/e-mail-integration-with-crm/", "destination": "https://blog.dynamicssquare.co.uk/e-mail-integration-with-crm/", "permanent": true },
+    { "source": "/blog/ms-dynamics-navision-2016-the-navigation-pane/", "destination": "https://blog.dynamicssquare.co.uk/ms-dynamics-navision-2016-the-navigation-pane/", "permanent": true },
+    { "source": "/blog/document-management-with-ms-dynamics-nav/", "destination": "https://blog.dynamicssquare.co.uk/document-management-with-ms-dynamics-nav/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-vs-dynamics-365-crm/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-dynamics-365-crm/", "permanent": true },
+    { "source": "/blog/install-microsoft-dynamics-365-business-central-on-premises/", "destination": "https://blog.dynamicssquare.co.uk/install-microsoft-dynamics-365-business-central-on-premises/", "permanent": true },
+    { "source": "/blog/what-is-dynamics-365-supply-chain-management/", "destination": "https://blog.dynamicssquare.co.uk/what-is-dynamics-365-supply-chain-management/", "permanent": true },
+    { "source": "/blog/why-your-business-needs-crm-software/", "destination": "https://blog.dynamicssquare.co.uk/why-your-business-needs-crm-software/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-vs-gp/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-gp/", "permanent": true },
+    { "source": "/blog/implement-power-bi-for-your-business/", "destination": "https://blog.dynamicssquare.co.uk/implement-power-bi-for-your-business/", "permanent": true },
+    { "source": "/blog/what-is-azure-iot-central/", "destination": "https://blog.dynamicssquare.co.uk/what-is-azure-iot-central/", "permanent": true },
+    { "source": "/blog/upgrade-dynamics-nav-to-dynamics-365-business-central/", "destination": "https://blog.dynamicssquare.co.uk/upgrade-dynamics-nav-to-dynamics-365-business-central/", "permanent": true },
+    { "source": "/blog/power-bi-features/", "destination": "https://blog.dynamicssquare.co.uk/power-bi-features/", "permanent": true },
+    { "source": "/blog/dynamics-365-business-central-vs-great-plains/", "destination": "https://blog.dynamicssquare.co.uk/dynamics-365-business-central-vs-great-plains/", "permanent": true },
+    { "source": "/blog/web-stories/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/", "permanent": true },
+    { "source": "/blog/web-stories/top-5-reasons-to-upgrade-from-dynamics-nav-to-business-central/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/top-5-reasons-to-upgrade-from-dynamics-nav-to-business-central/", "permanent": true },
+    { "source": "/blog/web-stories/top-10-benefits-of-dynamics-365-sales/", "destination": "https://blog.dynamicssquare.co.uk/web-stories/top-10-benefits-of-dynamics-365-sales/", "permanent": true }
   ]
 }
